<resources>
    <string name="app_name">Graduate Registration</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="welcome_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. \n Est quis habitasse in dui condimentum laoreet volutpat ultrices.\n Nisi, orci, eget scelerisque elit. Gravida turpis.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">welcome_logo</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_txt">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="karyakarta_login">Karyakarta Login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="graduate_registration_form">Graduate Registration \n form</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="all_graduates">All Graduates</string>
    <string name="bubble_image">bubble_image</string>
    <string name="back_arrow">back arrow</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="Bamu_district">
        <item>Beed</item>
        <item>Aurangabad</item>
        <item>Osmanabad</item>
        <item>Jalna</item>
    </string-array>

    <string-array name="Beed">
        <item>Beed</item>
        <item>Kaij</item>
        <item>Georai</item>
        <item>Patoda</item>
        <item>Ashti</item>
        <item>Shirur</item>
        <item>Ambajogai</item>
        <item>Kaij</item>
        <item>Majalgaon</item>
        <item>Dharur</item>
        <item>Parli</item>
        <item>Wadwani</item>
    </string-array>

    <string-array name="Aurangabad">
        <item>Aurangabad</item>
        <item>Sillod</item>
        <item>Soegaon</item>
        <item>Vaijapur</item>
        <item>Gangapur</item>
        <item>Paithan</item>
        <item>Phulambri</item>
        <item>Kannad</item>
        <item>Khultabad</item>
    </string-array>

    <string-array name="Osmanabad">
        <item>Osmanabad</item>
        <item>Tuljapur</item>
        <item>Umarga</item>
        <item>Kalamb</item>
        <item>Paranda</item>
        <item>Bhum</item>
        <item>Lohara</item>
        <item>Washi</item>
    </string-array>

    <string-array name="Jalna">
        <item>Jalna</item>
        <item>Ambad</item>
        <item>Bhokardan</item>
        <item>Jafrabad</item>
        <item>Partur</item>
        <item>Ghansavngi</item>
        <item>Mantha</item>
        <item>Badnapur</item>
    </string-array>

    <string-array name="University">
        <item>Dr. Babasaheb Ambedkar Marathwada University, Aurangabad</item>
        <item>Swami Ramanand Teerth Marathwada University, Nanded</item>
    </string-array>


    <string name="complete_registration">Create New User</string>
    <string name="get_otp">Get Otp</string>
    <string name="loading">Loading…</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="select_university">Select University</string>
    <string name="select_district">Select District</string>
    <string name="select_taluka">Select Taluka</string>
    <string name="new_user">New User</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter otp</string>
    <string name="done_submitting_form">Done Submitting Form</string>
    <string name="taluka">Taluka</string>
    <string name="university">University</string>
    <string name="gradute_details">Gradute Details</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="registrations">Registrations</string>
</resources>