<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5ECEB"
    tools:context=".presentation.profile.EditProfileFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="-8dp"
        android:background="@drawable/card_rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-10dp"
        android:src="@mipmap/side_circles_bubble"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_changes"
        app:layout_constraintTop_toBottomOf="@+id/profile_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/enter_full_name"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="20dp"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/et_mobile_num"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="20dp"
                tools:ignore="Autofill,RtlSymmetry" />


            <EditText
                android:id="@+id/et_email_id"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="20dp"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/et_university"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/university"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="3"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:importantForAutofill="no"
                android:focusable="false"/>

            <EditText
                android:id="@+id/et_district"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/district"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry"
                android:autofillHints=""
                android:focusable="false"/>

            <EditText
                android:id="@+id/et_taluka"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/taluka"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="20dp"
                tools:ignore="Autofill,RtlSymmetry"
                android:focusable="false"/>



        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>